@@ -901,8 +901,8 @@ class ZCatalog(Folder, Persistent, Implicit):
             for querykey, details in sorted(plan.items()):
                 output.append('    %s: {' % repr(querykey))
                 for indexname, benchmark in sorted(details.items()):
-                    tuplebench = repr(tuple(benchmark))
-                    output.append('      %r:\n      %s,' % (indexname, tuplebench))
+                    tuplebench = (round(benchmark[0], 2), ) + benchmark[1:]
+                    output.append('      %r:\n      %r,' % (indexname, tuplebench))
                 output.append('    },')
             output.append('  },')
         output.append('}')
